experiments/iree/logs/mini_cnn_gemmini_tile.iree_fail.txt
experiments/gemmini/iree_inputs/mini_cnn_block.gemmini_tile.mlir:62:5: error: Dialect `gemmini' not found for custom op 'gemmini.tile_conv' 
    gemmini.tile_conv %alloc_1 %alloc_2 %alloc_3 %alloc_4 %c30_i64 %c30_i64 %c3_i64 : memref<1x32x32x3xf32> memref<27x16xf32> memref<16xi32> memref<900x16xf32> i64 i64 i64
    ^
experiments/gemmini/iree_inputs/mini_cnn_block.gemmini_tile.mlir:62:5: note: Available dialects: affine, amdgpu, arith, arm_neon, arm_sme, arm_sve, bufferization, builtin, cf, check, chlo, complex, emitc, flow, func, gpu, hal, hal_inline, hal_loader, io_parameters, iree_codegen, iree_cpu, iree_encoding, iree_gpu, iree_linalg_ext, iree_tensor_ext, iree_vector_ext, linalg, llvm, math, memref, ml_program, nvgpu, nvvm, pcf, pdl, pdl_interp, quant, rocdl, scf, shape, shard, spirv, stablehlo, stream, tensor, tm_tensor, torch, torch_c, tosa, transform, ub, util, vector, vhlo, vm, vmvx ; for more info on dialect registration see https://mlir.llvm.org/getting_started/Faq/#registered-loaded-dependent-whats-up-with-dialects-management
